--- a/index.html
+++ b/index.html
@@ -5,104 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="./assets/css/menu.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Azuni</title>
 </head>
 <body>
     <header>
-        <h1>Azuni</h1>
+        <menu id="menu">
+            <span class="material-symbols-outlined" id="menu-hamburguer">
+                menu
+            </span>
+            <div id="menu-opcoes">
+                <nav><a href="#">Início</a></nav>
+                <nav><a href="#">Produtos</a></nav>
+                <nav><a href="#">Sobre Nós</a></nav>
+                <nav><a href="#">Blog</a></nav>
+                <nav><a href="#">Promoções</a></nav>
+                <nav><a href="#">Contato</a></nav>
+            </div>
+        </menu>
+        <img id="logo" src="./src/imagens/logo sem fundo.png" alt="Logo da Azuni">
+        <span class="material-symbols-outlined" id="carrinho">
+            shopping_cart
+        </span>
     </header>
     <section class="wrapper">
         <div class="slide-wrapper">
             <button class="slide-nav-button-previous material-symbols-outlined">arrow_back_ios</button>
             <button class="slide-nav-button-next material-symbols-outlined">arrow_forward_ios</button>
             <div class="slide-list">
-                <div class="slide-item">
+                <div class="slide-item" data-index="0">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide1.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide1.jpg">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="1">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide2.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide2.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="2">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide3.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide3.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="3">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide4.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide4.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="4">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide5.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide5.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="5">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide6.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide6.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="6">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide7.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide7.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
-                <div class="slide-item">
+                <div class="slide-item" data-index="7">
                     <div class="slide-content">
-                        <img src="./assets/imgs/slide8.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/slide8.jpg" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
-                            <h3>Brinco em aço inoxidável</h3>
+                            <h3>Lindo e maravilhoso</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="slide-controls">
-                <button class="slide-control-button material-symbols-outlined active">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
-                <button class="slide-control-button material-symbols-outlined">radio_button_unchecked</button>
+                
             </div>
         </div>
-
     </section>
     <script src="./js/slides.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
