--- a/index.html
+++ b/index.html
@@ -112,7 +112,62 @@
             </div>
         </div>
     </section>
+
+    <!--------------- SLIDES DE INFORMAÇÕES --------------->
+
+    <section class="informations">
+        <div class="slide-wrapper-informations">
+            <div class="slide-list-informations">
+                <div class="slide-item-information">
+                    <div class="slide-information">
+                        <span class="icons-container">
+                            <img src="./assets/imgs/icons/package_FILL0_wght400_GRAD0_opsz48.svg" alt="ícone de envio"  id="icone-envio">
+                        </span>
+                        <h3>
+                            Enviamos para todo o Brasil
+                        </h3>
+                    </div>
+                </div>
+                <div class="slide-item-information">
+                    <div class="slide-content">
+                        <div class="slide-information">
+                            <span class="icons-container">
+                                <img src="./assets/imgs/icons/workspace_premium_FILL0_wght400_GRAD0_opsz48.svg" id="icone-garantia" alt="icone de garantia">
+                            </span>
+                            <h3>
+                                Garantia vitalícia na cor do metal
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-item-information">
+                    <div class="slide-content">
+                        <div class="slide-information">
+                            <span class="icons-container">
+                                <img src="./assets/imgs/icons/credit_card_FILL0_wght400_GRAD0_opsz48.svg" id="icone-credito" alt="icone de garantia">
+                            </span>
+                            <h3>
+                                Parcele em até 3x sem juros em compras acima de R$ 60,00
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="controls-button-slide-information">
+                <button class="material-symbols-outlined button-information" id="button01">
+                    radio_button_unchecked
+                </button>
+                <button class="material-symbols-outlined button-information" id="button02">
+                    radio_button_unchecked
+                </button>
+                <button class="material-symbols-outlined button-information" id="button03">
+                    radio_button_unchecked
+                </button>
+            </div>
+        </div>
+    </section>
     <script src="./js/slides.js"></script>
+    <script src="./js/slidesInfo.js"></script>
     <script src="./js/menu.js"></script>
 </body>
 </html>
