--- a/index.html
+++ b/index.html
@@ -119,17 +119,19 @@
         <div class="slide-wrapper-informations">
             <div class="slide-list-informations">
                 <div class="slide-item-information">
-                    <div class="slide-information">
-                        <span class="icons-container">
-                            <img src="./assets/imgs/icons/package_FILL0_wght400_GRAD0_opsz48.svg" alt="ícone de envio"  id="icone-envio">
-                        </span>
-                        <h3>
-                            Enviamos para todo o Brasil
-                        </h3>
+                    <div class="slide-content-information">
+                        <div class="slide-information">
+                            <span class="icons-container">
+                                <img src="./assets/imgs/icons/package_FILL0_wght400_GRAD0_opsz48.svg" alt="ícone de envio"  id="icone-envio">
+                            </span>
+                            <h3>
+                                Enviamos para todo o Brasil
+                            </h3>
+                        </div>
                     </div>
                 </div>
                 <div class="slide-item-information">
-                    <div class="slide-content">
+                    <div class="slide-content-information">
                         <div class="slide-information">
                             <span class="icons-container">
                                 <img src="./assets/imgs/icons/workspace_premium_FILL0_wght400_GRAD0_opsz48.svg" id="icone-garantia" alt="icone de garantia">
@@ -141,7 +143,7 @@
                     </div>
                 </div>
                 <div class="slide-item-information">
-                    <div class="slide-content">
+                    <div class="slide-content-information">
                         <div class="slide-information">
                             <span class="icons-container">
                                 <img src="./assets/imgs/icons/credit_card_FILL0_wght400_GRAD0_opsz48.svg" id="icone-credito" alt="icone de garantia">
@@ -164,6 +166,43 @@
                     radio_button_unchecked
                 </button>
             </div>
+        </div>
+    </section>
+
+
+    <section class="ofertas">
+        <div class="ofertas-container" id="brincos-argolas">
+            <a href="#">
+                <div class="banner" >
+                    <img src="./assets/imgs/brincos.jpg" alt="Imagem de brincos e argolas da Azuni" id="brincos">
+                    <div id="texto-brincos">
+                        <h3>Brincos e Argolas</h3>
+                        <p>Confira</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="ofertas-container" id="colares-chokers">
+            <a href="#">
+                <div class="banner" >
+                    <img src="./assets/imgs/colar.jpg" alt="Imagem de brincos e argolas da Azuni" id="colares">
+                    <div id="texto-colares">
+                        <h3>Colares e Chokers</h3>
+                        <p>Confira</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="ofertas-container">
+            <a href="#">
+                <div class="banner"  id="pulseiras">
+                    <img src="./assets/imgs/pulseiras.jpg" alt="Imagem de brincos e argolas da Azuni" id="pulseiras">
+                    <div id="texto-pulseiras">
+                        <h3>Pulseiras</h3>
+                        <p>Confira</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
     <script src="./js/slides.js"></script>
