--- a/index.html
+++ b/index.html
@@ -211,26 +211,129 @@
             <h2>Lançamentos</h2>
         </div>
         <div class="lista-slide-lancamentos">
-            <div class="item-do-lancamento">
-                <div class="item-lancamento-container">
-                    <div class="imagem-lancamento-container">
-                        <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+            <div class="position-item-lancamento">
+                <div class="item-do-lancamento">
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
                     </div>
-                    <div class="texto-lancamento-container">
-                        <h4>
-                            Lorem ipsum dolor sit amet consectetur
-                        </h4>
-                        <h3>
-                            R$35,90
-                        </h3>
-                        <p>3x de 11,97 sem juros</p>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                    </div>
+                    <div class="item-lancamento-container">
+                        <div class="imagem-lancamento-container">
+                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                        </div>
+                        <div class="texto-lancamento-container">
+                            <h4>
+                                Lorem ipsum dolor sit amet consectetur
+                            </h4>
+                            <h3>
+                                R$35,90
+                            </h3>
+                            <p>3x de 11,97 sem juros</p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
+            
         </div>
     </section>
     <script src="./js/slides.js"></script>
     <script src="./js/slidesInfo.js"></script>
+    <script src="./js/slidesLancamento.js"></script>
     <script src="./js/menu.js"></script>
 </body>
 </html>
