--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa2.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -250,7 +250,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa3.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa4.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa5.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -292,7 +292,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa6.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="item-lancamento-container">
                         <div class="imagem-lancamento-container">
-                            <img src="./assets/imgs/colar-rosa.jpg" alt="Imagem do lançamento">
+                            <img src="./assets/imgs/colar-rosa7.jpg" alt="Imagem do lançamento">
                         </div>
                         <div class="texto-lancamento-container">
                             <h4>
@@ -341,13 +341,6 @@
     <section class="contatos">
         <div class="redes-sociais">
             <div class="links">
-                <a target="_blank" href="https://www.facebook.com/profile.php?id=100093508792055">
-                    <div class="rede-social" id="facebook">
-                        <img src="./src/imagens/facebook.svg" class="icone-redes-sociais" alt="Logo Facebook">
-                        <h2>@azunioficial</h2>
-                        <p>Estamos no facebook</p>
-                    </div>
-                </a>
                 <a target="_blank" href="https://instagram.com/azunioficial?igshid=MzRlODBiNWFlZA==">
                     <div class="rede-social" id="instagram">
                         <img src="./src/imagens/instagram.svg" class="icone-redes-sociais" alt="Logo instagram">
