--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="slide-list">
                 <div class="slide-item" data-index="0">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide1.jpg">
+                        <img class="image-slide" src="./assets/imgs/imagem0.png">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="slide-item" data-index="1">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide2.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem1.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="slide-item" data-index="2">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide3.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem2.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="slide-item" data-index="3">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide4.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem3.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="slide-item" data-index="4">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide5.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem4.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="slide-item" data-index="5">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide6.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem5.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="slide-item" data-index="6">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide7.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem6.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Brinco em aço inoxidável</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="slide-item" data-index="7">
                     <div class="slide-content">
-                        <img class="image-slide" src="./assets/imgs/slide8.jpg" alt="Brinco em aço inoxidável">
+                        <img class="image-slide" src="./assets/imgs/imagem7.png" alt="Brinco em aço inoxidável">
                         <div class="slide-description">
                             <h3>Lindo e maravilhoso</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -179,37 +179,33 @@
 
     <section class="ofertas">
         <div class="ofertas-container" id="brincos-argolas">
-            <a href="#">
                 <div class="banner">
-                    <img src="./assets/imgs/brincos.jpg" alt="Imagem de brincos e argolas da Azuni" id="brincos">
+                    <a href="#">
+                        <img src="./assets/imgs/brincos.jpg" alt="Imagem de brincos e argolas da Azuni" id="brincos">
+                    </a>
                     <div id="texto-brincos">
                         <h3>Brincos e Argolas</h3>
                         <p>Confira</p>
                     </div>
                 </div>
-            </a>
         </div>
         <div class="ofertas-container" id="colares-chokers">
-            <a href="#">
                 <div class="banner">
-                    <img src="./assets/imgs/colar.jpg" alt="Imagem de brincos e argolas da Azuni" id="colares">
+                    <a href="#"><img src="./assets/imgs/colar.jpg" alt="Imagem de brincos e argolas da Azuni" id="colares"></a>
                     <div id="texto-colares">
                         <h3>Colares e Chokers</h3>
                         <p>Confira</p>
                     </div>
                 </div>
-            </a>
         </div>
         <div class="ofertas-container">
-            <a href="#">
                 <div class="banner" id="pulseiras">
-                    <img src="./assets/imgs/pulseiras.jpg" alt="Imagem de brincos e argolas da Azuni" id="pulseiras">
+                    <a href="#"><img src="./assets/imgs/pulseiras.jpg" alt="Imagem de brincos e argolas da Azuni" id="pulseiras"></a>
                     <div id="texto-pulseiras">
                         <h3>Pulseiras</h3>
                         <p>Confira</p>
                     </div>
                 </div>
-            </a>
         </div>
     </section>
 
